refactor: change string formatting and error messages